Added delete option for list item
