# lib/api/list.ts
@@ -1,5 +1,5 @@
 import { Request, Response } from "express";
-import { countListPages, createItem, deleteCheckedItems, findItem, findList, updateItemChecked } from "../database/item";
+import { countListPages, createItem, deleteCheckedItems, deleteItem, findItem, findList, updateItemChecked } from "../database/item";
 import { getName, getOrder } from "../validation/semantic-validation";
 import { getInt, getObject, getOrUndefined } from "../validation/type-validation";
 import { Created, Forbidden, handleException, NoContent, Ok } from "../web/response";
@@ -48,6 +48,20 @@ export async function deleteList(req: Request, res: Response): Promise<void> {
     try {
         const user = await validateToken(req);
         await deleteCheckedItems(user.id);
+        new NoContent().send(res);
+    } catch(e: any) {
+        handleException(e, res);
+    }
+}
+
+export async function delItem(req: Request, res: Response): Promise<void> {
+    try {
+        const user = await validateToken(req);
+        const id = getInt(req.params.itemId);
+        const item = await findItem(id);
+        if(item.userId != user.id)
+            throw new Forbidden();
+        await deleteItem(user.id, id);
         new NoContent().send(res);
     } catch(e: any) {
         handleException(e, res);
